@@ -144,7 +144,7 @@ enum ECompression {
 	CompressionDXT1,		/**< DXT1 compression (RGB compression: 8:1, 8 bytes per block) */
 	CompressionDXT3,		/**< DXT3 compression (RGBA compression: 4:1, 16 bytes per block) */
 	CompressionDXT5,		/**< DXT5 compression (RGBA compression: 4:1, 16 bytes per block) */
-	CompressionATI1N,		/**< ATI1N compression (8 bytes per block) */
+	CompressionLATC1,		/**< 1 component texture compression (8 bytes per block) */
 	CompressionLATC2		/**< 2 component texture compression (luminance & alpha compression 4:1 -> normal map compression, also known as LATC2 or previously 3DC, known as BC5 in DirectX 10, 16 bytes per block) */
 };
 
