@@ -141,6 +141,7 @@ uint32 TextureBuffer2D::GetNumOfBytes(uint32 nMipmap, EPixelFormat nFormat) cons
 			// DXT formats divide the texture buffer into 4x4 blocks, each block has a fixed number of bytes
 			switch (nFormat) {
 				case DXT1:
+				case LATC1:
 					return ((vSize.x+3)/4)*((vSize.y+3)/4)*8;
 
 				case DXT3:
