@@ -124,6 +124,7 @@ uint32 TextureBufferRectangle::GetNumOfBytes(uint32 nMipmap, EPixelFormat nForma
 			// DXT formats divide the texture buffer into 4x4 blocks, each block has a fixed number of bytes
 			switch (nFormat) {
 				case DXT1:
+				case LATC1:
 					return ((m_vSize.x+3)/4)*((m_vSize.y+3)/4)*8;
 
 				case DXT3:
