@@ -195,7 +195,7 @@ TextureBuffer1D::TextureBuffer1D(PLRenderer::Renderer &cRenderer, Image &cImage,
 													nSourceFormat = D3DFMT_DXT5;
 													break;
 
-												case CompressionATI1N:
+												case CompressionLATC1:
 													nSourceFormat = (D3DFORMAT)'1ITA';
 													break;
 
