@@ -191,7 +191,7 @@ TextureBuffer3D::TextureBuffer3D(PLRenderer::Renderer &cRenderer, Image &cImage,
 												nSourceFormat = D3DFMT_DXT5;
 												break;
 
-											case CompressionATI1N:
+											case CompressionLATC1:
 												nSourceFormat = (D3DFORMAT)'1ITA';
 												break;
 
