@@ -192,7 +192,7 @@ TextureBufferRectangle::TextureBufferRectangle(PLRenderer::Renderer &cRenderer, 
 												nSourceFormat = D3DFMT_DXT5;
 												break;
 
-											case CompressionATI1N:
+											case CompressionLATC1:
 												nSourceFormat = (D3DFORMAT)'1ITA';
 												break;
 
